Fixed wrapping grid cells body

--- a/src/server/HSMServer/wwwroot/css/home/home.css
+++ b/src/server/HSMServer/wwwroot/css/home/home.css
@@ -93,6 +93,7 @@
 .grid-cell {
     text-align: center;
     border-radius: 0.25rem;
+    white-space: nowrap;
 }
 
 .clickable-node {
